trunk/Archive2/4b/52c95686ba4a78/output
main.cpp:20:17: warning: unused parameter 'x' [-Wunused-parameter]
    void add(T* x){}
                ^
main.cpp:27:10: warning: unused parameter 'ptr' [-Wunused-parameter]
    E(A* ptr) { /*...*/ }
         ^
main.cpp:33:14: error: cannot refer to class template 'E' without a template argument list
    list.add(E(new B));
             ^
main.cpp:24:7: note: template is declared here
class E
      ^
main.cpp:34:14: error: cannot refer to class template 'E' without a template argument list
    list.add(E(new C));
             ^
main.cpp:24:7: note: template is declared here
class E
      ^
2 warnings and 2 errors generated.
